# RelationalAlgebraCompiler

./: .gitignore  README  README.md  example.env  pyproject.toml  requirements.txt  test.csv  test2.csv
docs/: grammar_syntax.md  quick_reference.txt
ra_compiler/: __init__.py  __main__.py  cli.py  exceptions.py  executor.py  grammar.lark  mysql.py  parser.py  translator.py  utils.py
tests/: __init__.py  __main__.py  run_tests.py  test_base.py  test_executor.py  test_grammar.txt  test_handle_query.py
