[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ra_compiler"
version = "0.1.0"
description = "Relational Algebra Compiler"
readme = "README.md"
requires-python = ">=3.8"
authors = [
  { name = "Sydney Lynch" }
]
keywords = ["relational algebra", "compiler", "SQL", "database"]

dependencies = [
  "lark-parser>=0.11.0",
  "mysql-connector-python>=8.0.25",
  "pandas>=1.5",
  "rich>=13.0",
  "python-dotenv>=1.0",
  "pyreadline3; sys_platform == 'win32'"
]

[project.urls]
"Homepage" = "https://github.com/sydlyn/RACompiler"

[tool.setuptools.packages.find]
where = ["."]

[tool.pylint."MESSAGES CONTROL"]
disable = [
    "global-statement",
    "broad-except",
    "missing-docstring",
]

[project.scripts]
rac = "ra_compiler.cli:main"
racTest = "tests.run_tests:main"
